explained usage of Events

--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -240,7 +240,7 @@ Note that \texttt{total\_trips} and \texttt{total\_durations} are highly correla
 
 For each of the continuous with recorded min, mean, and max  –- Visibility, Temperature, Dew Point, Humidity, and Sea Level Pressure -- we calculate their correlations with the response Total Trips. By feature, it turns out that Max Temperature, Min Visibility, Mean Dew Point, Mean Humidity, and Min Sea Level Pressure have the highest correlation with Total Trips (Table 2). Total Trips' high correlation with Max Temperature may be explained by the temperature at midday, when the temperature is usually highest and when people are prone to be out biking. We added each of these highest-correlation variables with the response to our baseline model. 
 
-Wind speed is a special case with variables Max Wind Speed, Mean Wind Speed, and Max Gust Speed. Though \texttt{Max\_Gust\_Speed\_MPH} had higher correlation with Total Trips than either \texttt{Max\_Wind\_Speed\_MPH} or \texttt{Mean\_Wind\_Speed\_MPH}, it also had 410 missing values. We opted to add \texttt{Mean\_Wind\_Speed\_MPH} which had the next-highest correlation with Total Trips (Figure 3). We also added Precipitation_In (zero-inflated continuous variable) and Events (dummy variable based on whether a weather event occurred that day).
+Wind speed is a special case with variables Max Wind Speed, Mean Wind Speed, and Max Gust Speed. Though \texttt{Max\_Gust\_Speed\_MPH} had higher correlation with Total Trips than either \texttt{Max\_Wind\_Speed\_MPH} or \texttt{Mean\_Wind\_Speed\_MPH}, it also had 410 missing values. We opted to add \texttt{Mean\_Wind\_Speed\_MPH} which had the next-highest correlation with Total Trips (Figure 3). We also added Precipitation_In (zero-inflated continuous variable) and Events (dummy variable based on whether a weather event occurred that day). We utilized Events in two ways. First we set it such that Event was a dummy variable representing whether there was an event that day. Events included fog, fog and rain, rain, rain and snow, rain and thunderstorm, and snow. There were 328 days where there were events and 361 without. The second way we utilized Events was by making it a dummy based on whether there was rain or snow on that day (as we might not expect a strong effect from fog). 
 
 
 ```{r plot exploratory table, echo = FALSE}
