--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -161,9 +161,9 @@ Notice that nine variables in our data dictionary were created from other variab
 
 ## Understanding Outliers
 
-The figure below plots daily bike ridership in Seattle, with the total rides taken each day in blue circles and the sum of the durations of the rides taken each day in red triangles. This figure suggests that outliers in total riders tend to coincide with outliers in ride durations. For instance, the day with the highest bike riders -- 941 on Sunday, April 20, 2015 -- was also the day with the second highest sum of ride durations (359.7 hours). It's not clear from lookup what caused bike ridership to be so high on this day; like much of the data gathered from the real world, many factors likely contributed to high ridership on this day.
+The figure below plots daily bike ridership in Seattle, with the total rides taken each day in blue circles and the sum of the durations of the rides taken each day in red triangles. This figure suggests that outliers in total riders tend to coincide with outliers in ride durations. For instance, the day with the highest bike riders -- 941 on Monday, April 20, 2015 -- was also the day with the second highest sum of ride durations (359.7 hours). This is day 190, the largest outlier in the data set. It's not clear from look-up what caused bike ridership to be so high on this day; like much of the data gathered from the real world, many factors likely contributed to high ridership on this day.
 
-36 days earlier on Sunday, March 15, 2015 was the second-wettest March day on record in the Puget Sound Region (SOURCE). The rain was so severe that a mudslide occured in Western Seattle. Knowing this, you'd expect March 15 to have been a bad day for cycling, and you'd be right: only 34 trips took place on this day with a combined ride duration of just 6.3 hours. This was the second worst day for cycling behind Sunday, December 27, 2015 with just 30 trips totalling 4.5 hours. The coincidence between trips and durations explains the flattening of the data -- the decrease in variation from the mean -- observed in \texttt{avg\_durations}.
+36 days earlier on Sunday, March 15, 2015 was the second-wettest March day on record in the Puget Sound Region (SOURCE). The rain was so severe that a mudslide occurred in Western Seattle. Knowing this, you'd expect March 15 to have been a bad day for cycling, and you'd be right: only 34 trips took place on this day with a combined ride duration of just 6.3 hours. This was the second worst day for cycling behind Sunday, December 27, 2015 with just 30 trips totaling 4.5 hours. This also happens to be the greatest leverage point by far (0.144). The coincidence between trips and durations explains the flattening of the data -- the decrease in variation from the mean -- observed in \texttt{avg\_durations}.
 
 
 ```{r sum stats,include = FALSE}
@@ -186,7 +186,7 @@ plot(df$day_number, df$total_trips,
      pch = 21, 
      ylim = c(0, max(df$total_trips)))  # Primary Y-axis
 
-# Overlay the second dataset
+# Overlay the second data set
 par(new = TRUE)  # Add a new plot without clearing the previous one
 plot(df$day_number, df$total_durations, 
      xlab = "", 
@@ -204,7 +204,7 @@ mtext("Total Durations (secs)", side = 4, line = 3)  # Label for right Y-axis
 # Add a title for the entire plot
 title(main = "Daily Bike Share Ridership in Seattle", line = 1, cex.main = 1.25)
 
-# Add a legend to differentiate datasets
+# Add a legend to differentiate data sets
 legend("topright", legend = c(expression(Sigma ~ "Riders"), expression(Sigma ~ "Durations (secs)")), 
        col = c("black", "black"), 
        pt.bg = c("blue", "red"),
@@ -237,11 +237,6 @@ hist(df$avg_durations, xlab='', main='Average Durations'); hist(log(df$avg_durat
 Note that \texttt{total\_trips} and \texttt{total\_durations} are highly correlated (>0.82). This is consistent with our discussion on outliers. Considering the shape and spread of the distributions, note that Average Durations is bimodal, Total Durations is right-skewed, and Total Trips is roughly normal. It's clear that Total Durations makes for the easiest interpretation without being transformed. Based on visual inspection, its the most normal appearing on the six distributions. We therefore use \texttt{total\_trips} as our response variable going forward. 
 
 ## Selecting the Predictors
-
-For each of the continuous with recorded min, mean, and max  –- Visibility, Temperature, Dew Point, Humidity, and Sea Level Pressure -- we calculate their correlations with the response Total Trips. By feature, it turns out that Max Temperature, Min Visibility, Mean Dew Point, Mean Humidity, and Min Sea Level Pressure have the highest correlation with Total Trips (Table 2). Total Trips' high correlation with Max Temperature may be explained by the temperature at midday, when the temperature is usually highest and when people are prone to be out biking. We added each of these highest-correlation variables with the response to our baseline model. 
-
-Wind speed is a special case with variables Max Wind Speed, Mean Wind Speed, and Max Gust Speed. Though \texttt{Max\_Gust\_Speed\_MPH} had higher correlation with Total Trips than either \texttt{Max\_Wind\_Speed\_MPH} or \texttt{Mean\_Wind\_Speed\_MPH}, it also had 410 missing values. We opted to add \texttt{Mean\_Wind\_Speed\_MPH} which had the next-highest correlation with Total Trips (Figure 3). We also added Precipitation_In (zero-inflated continuous variable) and Events (dummy variable based on whether a weather event occurred that day). We utilized Events in two ways. First we set it such that Event was a dummy variable representing whether there was an event that day. Events included fog, fog and rain, rain, rain and snow, rain and thunderstorm, and snow. There were 328 days where there were events and 361 without. The second way we utilized Events was by making it a dummy based on whether there was rain or snow on that day (as we might not expect a strong effect from fog). 
-
 
 ```{r plot exploratory table, echo = FALSE}
 # Create a new data frame with grouped features
@@ -306,6 +301,13 @@ plot(df$Max_Gust_Speed_MPH, df$total_trips,
 
 ```
 
+For each of the continuous variables with recorded min, mean, and max  –- Visibility, Temperature, Dew Point, Humidity, and Sea Level Pressure -- we calculate their correlations with the response Total Trips. By feature, it turns out that Max Temperature, Min Visibility, Mean Dew Point, Mean Humidity, and Min Sea Level Pressure have the highest correlation with Total Trips (Table 2). Total Trips' high correlation with Max Temperature may be explained by the temperature at midday, when the temperature is usually highest and when people are prone to be out biking between commutes and leisure. We added each of these highest-correlation variables with the response to our baseline model. 
+
+Wind speed is a special case with variables Max Wind Speed, Mean Wind Speed, and Max Gust Speed. Though \texttt{Max\_Gust\_Speed\_MPH} had higher correlation with Total Trips than either \texttt{Max\_Wind\_Speed\_MPH} or \texttt{Mean\_Wind\_Speed\_MPH}, it also had 410 missing values. We opted to add \texttt{Mean\_Wind\_Speed\_MPH} which had the next-highest correlation with Total Trips (Figure 3). We also added Precipitation_In (a zero-inflated continuous variable) and the descriptive variable Events. 
+
+We utilized Events in two ways. First we set it such that Event was a dummy variable representing whether there was an event that day. Events included fog, fog and rain, rain, rain and snow, rain and thunderstorm, and snow. There were 328 days where there were events and 361 without. The second way we utilized Events was by making it a dummy based on whether there was rain or snow on that day (as we might not expect a strong effect from fog). 
+
+
 
 ## Model Selection
 
@@ -342,7 +344,7 @@ $$
 
 Based on ANOVA / Partial $F$-test, the full model provides a better fit to the observed data over the partial model ($F$ = 6.9579, $p$ = 0.0085). However, Variance Inflation Factor ($VIF$) -- measuring multicolinearity between the predictors and Total Trips -- is abnormally high for \texttt{Mean\_Humidity} ($VIF$ = 9.05), \texttt{MeanDew\_Point\_F} ($VIF$ = 10.68), and \texttt{Max\_Temperature\_F} ($VIF$ = 19.09) in the full model. 
 
-It turns out that \texttt{Max\_Temperature\_F} has high correlation with \texttt{MeanDew\_Point\_F} (0.72) and \texttt{Mean\_Humidity} (-0.67). The results from $VIF$ analysis makes clear the confounding results in stepwise selection; In the forwards case, \texttt{Max\_Temperature\_F} makes the best 1-predictor model and it is never eliminated in successive model. The partial model has VIF values near one. Thus, the partial model is the better model.
+It turns out that \texttt{Max\_Temperature\_F} has high correlation with \texttt{MeanDew\_Point\_F} (0.72) and \texttt{Mean\_Humidity} (-0.67). The results from $VIF$ analysis makes clear the confounding results in step-wise selection; In the forwards case, \texttt{Max\_Temperature\_F} makes the best 1-predictor model and it is never eliminated in successive model. The partial model has VIF values near one. Thus, the partial model is the better model.
 
 Finally, we strengthen our model by considering temporal variation. Adding the dummy variable \texttt{weekday\_weekend} accounts for weekly changes in ridership based on commute pattern changes in the downtown for leisure, work and school. Adding the variable \texttt{season} accounts for changes in ridership based on the solstices and equinoxes while adding \texttt{fall\_winter} accounts for changes in ridership based only on the solstices:
 $$
@@ -356,9 +358,9 @@ Considering both the high correlation between variables \texttt{season} and \tex
 
 $$
 \begin{aligned}
-\texttt{total\_trips}_i^{fin} &= \beta_{i0} + \beta_{i1} \texttt{MeanDew\_Point\_F}_i \\
-&+ \beta_{i2} \texttt{Mean\_Wind\_Speed\_MPH}_i + \beta_{i3} \texttt{Mean\_Humidity}_i + \beta_{i4} \texttt{Precipitation\_In}_i \\
-&+ \beta_{i5} \texttt{weekday\_weekend}_i + \beta_{i6} \texttt{fall\_winter}_i \\
+\texttt{total\_trips}_i^{fin} &= 485.40 + 8.10 \texttt{MeanDew\_Point\_F}_i \\
+&- 8.85 \texttt{Mean\_Wind\_Speed\_MPH}_i - 6.20 \texttt{Mean\_Humidity}_i - 103.49 \texttt{Precipitation\_In}_i \\
+&- 50.23 \texttt{weekday\_weekend}_i - 34.11 \texttt{fall\_winter}_i \\
 \end{aligned}
 $$
 
@@ -719,16 +721,10 @@ rsq = 1 - (predictionsse/predictionsst)
 ```
 
 
-Each regressor is significant to at least the 0.01 level, and the diagnostic plots are satisfactory. The residual plot moving-average looks flat. The normal quantile plot has few departures from the line. The scale location plot is relatively flat, indicating constant variance across fitted values. With coefficients, the equation for our final regression model is:
+Each regressor is significant to at least the 0.01 level, and the diagnostic plots are satisfactory. The residual plot moving-average looks flat. The normal quantile plot has few departures from the line. The scale location plot is relatively flat, indicating constant variance across fitted values. 
 
 
-$$
-\begin{aligned}
-\texttt{total\_trips}_i^{fin} &= 485.40 + 8.10 \texttt{MeanDew\_Point\_F}_i \\
-&- 8.85 \texttt{Mean\_Wind\_Speed\_MPH}_i - 6.20 \texttt{Mean\_Humidity}_i - 103.49 \texttt{Precipitation\_In}_i \\
-&- 50.23 \texttt{weekday\_weekend}_i - 34.11 \texttt{fall\_winter}_i \\
-\end{aligned}
-$$
+
 
 
 
@@ -747,15 +743,33 @@ cor(df$total_durations, df$MeanDew_Point_F)
 
 # Conclusion
 ## Interpretations
-Based on our model on any given day, holding all else equal, for a 1% increase in the mean relative humidity we expect 6.2 fewer trips. For a 1 degree Fahrenheit increase in the mean dew point, we expect 8.1 more trips. For a 1 inch increase in precipitation we expect 103.5 fewer trips. For a one mile per hour increase in the mean wind speed, we expect 8.8 fewer trips. For a day in fall or winter we expect 34.1 fewer trips than in summer or spring. For a day that is a weekend, we expect 50.2 fewer trips than on a weekday.
+For a given day with other variables held fixed, our model dictates
+\begin{itemize}
+\item For a 1\% increase in Mean Relative Humidity we expect 6.2 fewer trips
+\item For a 1°F increase in Mean Dew Point, we expect 8.1 more trips
+\item For a 1 inch increase in Precipitation we expect 103.5 fewer trips
+\item For a 1 MPH increase in the Mean Wind Speed, we expect 8.8 fewer trips
+\item For a day falling in between (including) 22 September and 19 March, we expect 34.1 fewer trips than outside of those days
+\item For a weekend day, we expect 50.2 fewer trips than on a weekday
+\end{itemize}
 
-Rationalizing the signs of the coefficients, it makes sense for trips to drop as relative humidity rises, because higher a higher relative humidity is known to feel uncomfortable. It makes sense for trips to increase as the mean dew point increases, as a higher dew point generally coincides with warmer weather, which could make biking more comfortable. It makes sense that an increase in the inches of precipitation would decrease trips, as biking in rain or snow could be more dangerous and uncomfortable. The roads could be slippery and you could get soaking wet. It makes sense that an increase in the miles per hour of mean wind speed would decrease ridership, as faster winds increase wind chill which feels very uncomfortable, and biking into headwinds is tiresome. It makes sense that ridership decreases in the fall and winter, as this is when days are shorter, when Seattle's rainy season starts, and when the leaves fall, potentially making it so that biking is slippery and less scenic. Lastly, an explanation for why ridership drops on the weekend is that many people likely used Pronto to get to work, which would not happen on the weekends.
+It makes sense for trips to drop as relative humidity rises, because higher relative humidity is uncomfortable to riders. It makes sense for trips to increase as the Mean Dew Point increases, as a higher Dew Point generally signals warmer weather. It makes sense that any precipitation would flatten ridership, as biking in rain or snow could be more risky and uncomfortable. It makes sense that an increase in the miles per hour of mean wind speed would decrease ridership, as faster winds increase wind chill which feels very uncomfortable, and biking into headwinds is tiresome. It makes sense that ridership decreases in the fall and winter, as this is when days are shorter, when Seattle's rainy season starts, and when the leaves fall, potentially making it so that biking is slippery and less scenic. Lastly, an explanation for why ridership drops on the weekend is that many people likely used Pronto to get to work, which would not happen on the weekends.
+
 ## Limitations
 In terms of limitations, as stated before, given that the climate of Seattle is different from many other cities, our results will have limited generalizability. Another limitation is that the weather data is for all of the Puget sound region, while the biking data is concentrated in downtown Seattle. If the weather data was specialized to the city itself, we may see the weather data have higher explanatory power. Lastly, one limitation is that two of are variables, mean humidity and mean dew point, are mathematically related, which could be cause for concern. The reason that this relationship doesn't affect the regression model is that they are not \textit{linearly} related.
 
 ## Extensions
 Some possible extensions of our work here could be analyzing the relationships between weather and ridership in different cities. We might see different relationships between the weather and ridership in cities that have different climates than Seattle, for instance, Houston, Texas. Another potential extension would be to use interaction terms, and create a dummy variable for holidays, like a 2018 paper by Kyoungok Kim did. 
 
+# References 
+
+Pronto Cycle Share, 2016. "Pronto Cycle Share Dataset," Kaggle. Available online at: https://www.kaggle.com/datasets/pronto/cycle-share-dataset.
+
+Kim, Kyoungok, 2018. "Investigation on the effects of weather and calendar events on bike-sharing according to the trip patterns of bike rentals of stations," Journal of Transport Geography, Elsevier, vol. 66(C), pages 309-320. 
+
+An, Ran & Zahnow, Renee & Pojani, Dorina & Corcoran, Jonathan, 2019. "Weather and cycling in New York: The case of Citibike," Journal of Transport Geography, Elsevier, vol. 77(C), pages 97-112.
+
+University of Washington, 2019. "Bike-sharing in Seattle," UW News, October 7, 2019. Available online.
 
 # Appendix
 ## Code Used for Data Cleaning
